# adac-rs

./: Cargo.toml  README.md
adac/: Cargo.toml
adac-cli/: Cargo.toml  README.md
adac-cli/src/: config.rs  display.rs  main.rs  offline.rs  pkcs11.rs  shared.rs  sign.rs  tests.rs  token.rs  verify.rs
adac-crypto/: Cargo.toml
adac-crypto-aws_lc/: Cargo.toml
adac-crypto-aws_lc/src/: lib.rs
adac-crypto-pkcs11/: Cargo.toml
adac-crypto-pkcs11/src/: lib.rs
adac-crypto-rust/: Cargo.toml
adac-crypto-rust/src/: lib.rs
adac-crypto/src/: public.rs  utils.rs
adac-crypto/src/public/: ec_dsa.rs  ed_448.rs  ml_dsa.rs  sm.rs
adac-cryptoki/: Cargo.toml
adac-cryptoki/src/: lib.rs
adac-cryptoki/src/public/: ec.rs
adac-tests/: Cargo.toml  offline-test.sh  pkcs11-test.sh
adac-tests/src/: aws_lc.rs  cryptoki.rs  ml_dsa.rs  pkcs11.rs  rust_crypto.rs
adac/src/: certificate.rs  lib.rs  token.rs
