# Copyright (c) 2019-2026, Arm Limited. All rights reserved.
# SPDX-License-Identifier: BSD-3-Clause

[package]
name = "adac-tests"
authors.workspace = true
version.workspace = true
edition.workspace = true
license = "BSD-3-Clause"

[dependencies]
adac = { path = "../adac" }
adac-crypto = { path = "../adac-crypto" }
adac-crypto-aws_lc = { path = "../adac-crypto-aws_lc" }
adac-crypto-pkcs11 = { path = "../adac-crypto-pkcs11" }
adac-crypto-rust = { path = "../adac-crypto-rust" }
adac-cryptoki = { path = "../adac-cryptoki" }
base16ct = { workspace = true }
base64 = { workspace = true }
clap = { version = "4", features = ["color", "env", "derive"] }
console = { version = "0.16", default-features = false, features = ["ansi-parsing", "std"] }
cryptoki = { workspace = true }
cryptoki-sys = "0.5.0"
hex = "0.4.3"
hex-literal = "1.1"
indicatif = "0.18.0"
pem = { workspace = true }
rand = { workspace = true }
